# jetbot-ros-object-following

./: README.md
object_following_1/: CMakeLists.txt  package.xml
object_following_1/launch/: object_following_1.launch
object_following_1/src/: my_detection_1.py
